# PHYSICAL_AI-HUMANOID_ROBOTICS

./: .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md
.specify/memory/: constitution.md
backend/: README.md  agent.py  api.py  main.py  pyproject.toml  requirements.txt  retrieve.py
backend/src/: __init__.py  chunker.py  config.py  crawler.py  embedder.py  qdrant_store.py
backend/tests/: conftest.py  test_chunker.py  test_embedder.py  test_qdrant.py
book/: docusaurus.config.js  sidebars.js
book/docs/capstone/: design-tradeoffs.md  end-to-end-pipeline.md  real-world-constraints.md
book/docs/hardware/: cloud-labs.md  sensors-robotics.md
book/docs/sim-to-real/: deployment-constraints.md
book/src/css/: custom.css
book/src/pages/: index.js  index.module.css
book/src/theme/: Root.tsx
history/prompts/001-physical-ai-book/: 001-spec-creation.spec.prompt.md  002-clarification.spec.prompt.md  003-plan-creation.plan.prompt.md  006-implement-book-green.prompt.md  007-implement-book-green.prompt.md  (+5 more)
specs/001-physical-ai-book/: data-model.md  plan.md  quickstart.md  research.md  spec-002-ui-ux-upgrade.md  spec.md  tasks.md
specs/001-rag-chatbot-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rag-agent/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/1-rag-embeddings-pipeline/: data-model.md  quickstart.md  spec.md  tasks.md
specs/2-retrieval-validation/: plan.md  quickstart.md  spec.md  tasks.md
website/: docusaurus.config.js  package-lock.json
website/docs/: intro.md
(+98 files in other folders)
